Updated the TODO file, and added a feature request for nested <ul>s.

--- a/TODO
+++ b/TODO
@@ -1,7 +1,5 @@
 Current roadmap:
-- replace the existing line-by-line wikimarkup parser with a single-pass, character-at-a-time parser. This will enable...
-- ul/ol lists, starting with single-depth, but progressing to 3-deep nesting as quickly as I can
-- proper handling of line separations, allowing smarter application of <p> and <br>, to replace the current blunt-instrument, everything-is-a-div approach
+- enable the use of ul/ol lists, starting with single-depth, but progressing to 3-deep nesting as quickly as I can
 - implementing {macro-name}content{/macro-name} hooks for user-added macros
 - designing and implementing a mechanism for easily selecting among renderers. The urgency of this is basically that of writing and incorporating a new renderer; don't hold your breath unless you're writing one.
 
